log
Fri 12 Aug 2022 12:17:31 PM UTC: 
 tests:  0|7
total_score: 0/70
d73c9a3
Fri 12 Aug 2022 12:35:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:11: error: expected ‘;’ before ‘}’ token
   15 |     *c=a+b
      |           ^
      |           ;
   16 | }
      | ~          
Compilation failed
a6d2acc
Fri 12 Aug 2022 12:35:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
03d7a77
Fri 12 Aug 2022 12:40:24 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaN’:
exercises.c:26:13: error: expected ‘;’ before ‘tot’
   26 |       a[i]=i
      |             ^
      |             ;
   27 |       tot += a[i];
      |       ~~~    
Compilation failed
119d7a0
Fri 12 Aug 2022 12:40:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ff47156
Fri 12 Aug 2022 12:53:52 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:18: error: expected ‘;’ before ‘)’ token
   40 |   for(int i=0;i<n)
      |                  ^
      |                  ;
exercises.c:42:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   42 |   return suma;
      |          ^~~~
exercises.c:39:6: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a81c1c9
